--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/*start of header css*/
 header{
     background-color: #1f2937;
     color: white;
@@ -6,6 +7,17 @@ header{
 
 #nav-container{
     display: flex;
-    align-items: center;
     list-style: none;
+    justify-content: center;
+
+}
+
+.nav{
+    margin-left: 10px;
+    
+}
+
+#nav-logo{
+    margin-right: auto;
+    margin-left: 50px;
 }
