--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ header{
 }
 
 .nav{
-    margin-left: 10px;
+    margin-right: 15px;
     
 }
 
@@ -21,3 +21,4 @@ header{
     margin-right: auto;
     margin-left: 50px;
 }
+/*end of header css*/
