Add flex and background color

--- a/styles.css
+++ b/styles.css
@@ -22,3 +22,11 @@ header{
     margin-left: 50px;
 }
 /*end of header css*/
+
+/*start of 1st section css*/
+#first-section{
+    background-color: #1f2937;
+    color: #f9faf8;
+    display: flex;
+    justify-content: center;
+}
