--- a/styles.css
+++ b/styles.css
@@ -30,10 +30,21 @@ header{
     display: flex;
     justify-content: center;
     height: 300px;
+    align-items: center;
 }
 
 #hero-main-text{
     font-size: 48px;
     font-weight: bolder;
-    width: 150px
+}
+
+#hero-body-text{
+    font-size: 18px;
+    color: #e5e7eb;
+}
+
+#main-image{
+    height: 150px;
+    width: 250px;
+    margin-left: 150px;
 }
