--- a/styles.css
+++ b/styles.css
@@ -152,3 +152,15 @@ button:active{
 	outline:none;
     padding:0;
 }    
+/*end of 4th section*/
+
+/*start of footer*/
+footer{
+    background-color: #1f2937;
+    color: #f9faf8;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+   
+}
